src/components/Contact/Contact.css
.contactme {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: stretch;
    justify-content: space-evenly;
    align-items: center;
    padding: 100px;
    margin-bottom: 50px;
    
}

.contactme h1 {
    display: flex;
    /* display: inline-flex; */
    background-color: black;
    color: white;
    /* width: 100% !important; */
    /* text-align: center; */
    padding: 10px;
    width: 24.75%;
    justify-content: center;
    align-items: center;
}

.contactme form {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: stretch;
    align-items: flex-start;
    background-color: white;
    color: black;
    border: 2px solid black;
    padding: 50px;
    width: 100%;
}

.contactme label {
    display: flex;

}

.contactme input, textarea {
    background-color: lightyellow;
    width: 300%;
    padding: 10px;
    margin-bottom: 30px;
}

.contacttitle, .contactform {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: center;
    align-items: center;
}

.contactform {
    width: 50%;
}

.contacttitle {
    width: 230%;
}

